objects/PC_EngagementProgramSetting__mdt.object
<CustomObject>
    <description>Holds Engagement Program Settings</description>
    <fields>
        <fullName>PC_EngagementProgram__c</fullName>
        <description>Engagement Program for which the setting needs to be done</description>
        <inlineHelpText>Engagement Program for which the setting needs to be done</inlineHelpText>
        <label>Engagement Program</label>
        <referenceTo>PC_EngagementProgram__mdt</referenceTo>
        <relationshipLabel>Engagement Program Settings</relationshipLabel>
        <relationshipName>PC_EngagementPrograms</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>PC_IntegrationSetting__c</fullName>
        <description>Name of the integration setting that needs to be overridden</description>
        <inlineHelpText>Name of the integration setting that needs to be overridden</inlineHelpText>
        <label>Integration Setting</label>
        <referenceTo>PC_IntegrationSetting__mdt</referenceTo>
        <relationshipLabel>Engagement Program Settings</relationshipLabel>
        <relationshipName>PC_IntegrationSettings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>PC_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select this checkbox to mark the setting as active.</description>
        <inlineHelpText>Select this checkbox to mark the setting as active.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_PatientConnectSetting__c</fullName>
        <description>Name of the &quot;Patient Connect Setting&quot; that needs to be overridden</description>
        <inlineHelpText>Name of the &quot;Patient Connect Setting&quot; that needs to be overridden</inlineHelpText>
        <label>Patient Connect Setting</label>
        <referenceTo>PC_Patient_Connect_Setting__mdt</referenceTo>
        <relationshipLabel>Engagement Program Settings</relationshipLabel>
        <relationshipName>PC_PatientConnectSettings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>PC_SettingType__c</fullName>
        <description>Type of the Setting for which you would like to set the value</description>
        <inlineHelpText>Type of the Setting for which you would like to set the value.
If Patient Connect Setting is selected, then pick the setting from &apos;Patient Connect Setting&apos; field.
If Integration Setting is selected, then pick the setting from &apos;Integration Setting&apos; field.</inlineHelpText>
        <label>Setting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Integration Setting</fullName>
                </value>
                <value>
                    <fullName>Patient Connect Setting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_SettingValue__c</fullName>
        <description>Value for the setting selected in &quot;Setting Name&quot;</description>
        <inlineHelpText>Value for the setting selected in &quot;Setting Name&quot; section. Note - If Setting Name is &apos;Patient Connect Setting&apos; or &apos;Integration Setting&apos;, then, the value provided here (including blank value) will be considered for overriding the selected setting.</inlineHelpText>
        <label>Setting Value</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Engagement Program Setting</label>
    <pluralLabel>Engagement Program Setting</pluralLabel>
</CustomObject>